--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "pretest": "npm run compile",
     "test": "mocha tests/",
     "predeploy": "npm run compile",
-    "deploy": "node scripts/deploy.js"
+    "deploy": "node scripts/deploy.js",
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^1.2.1",
     "fs-extra": "^6.0.1",
+    "next": "^6.0.3",
+    "next-routes": "^1.4.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "solc": "^0.4.24",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "1.0.0-beta.34"
